	* Automaticaly switch to the scientific representation for numbers bigger than 10^4 on the axis tick labels
	* Automatically allow the latex typesetting in the application after the latex environment was installed later without making the user to go to the settings dialog
	* Allow to change the theme from within the application
	* Smooth and animated zooming in the worksheet view
	* Improved building with MSVC and ICC

Performance improvements:
	* Faster copy&paste in the spreadsheet

Bug fixes:
	* Bug 379877 - masked rows in spreadsheet not restored in project
	* Calculation of fit results corrected
	* Axes now support values larger than FLT_MAX (~10^38) and smaller than FLT_MIN (~10^-38)
	* When a LabPlot project is being droped in the main window, load the project directly instead of showing the import file dialog
	* Correctly save and restore masked cells
	* Don't crash if the rc-file was not found during the startup.

-----2.4-----
New features:
	* Support themes for plots
	* Import and editing of FITS data files
	* Data reduction by removing data points using multiple algorithms
	* Numerical differentiation and integration with several options
	* Many new pre-defined fit models (Gompertz, Weibull, Log-Normal, Gumbel, etc.) sorted in categories
	* Fit parameter now support fixed values, lower/upper limits and use Unicode
	* Fit model and random number distribution formulas are now rendered with LaTeX
	* Support user specified x range in all analysis functions
	* Allow to enter complete LaTeX documents in text labels
	* Configuration parameter to use different LaTex engines (LuaLaTex, XeLatex, pdfLaTex, LaTex)
	* Disable LaTeX typesetting if no LaTex installation (and other required tools) were found at runtime
	* Presenter mode for worksheets
	* Support for Mac OS
	* Support for Julia's vectors and tuples in CAS worksheets (requires Cantor v. 16.12 or higher)
	* Allow to jump directly to the data source spreadsheet via XYCurve's context menu