@@ -40,6 +40,7 @@ New features:
 	* Automatically allow the latex typesetting in the application after the latex environment was installed later without making the user to go to the settings dialog
 	* Allow to change the theme from within the application
 	* Smooth and animated zooming in the worksheet view
+	* Allow to add text labels to plots
 	* Improved building with MSVC and ICC
 
 Performance improvements:
